# 0.00.33 (63768) Apr 26, 2012
Initial thermometer "scaling" based on zoom level.
Ruler handles zooming by resizing in "even decimal" increments
Thermometer / density meter handle zooming by staying at a constant "screen" size.
# 0.00.32 (63628) Apr 19, 2012
# 0.00.31 (63331) Apr 11, 2012
Instrumented 2nd tab
Instrumented 1st tab
Fixed young-young automatic handling on 2nd tab (by default, will select divergent motion)
Updated with SpeedometerNode changes (SR)
# 0.00.30 (62920) Apr 2, 2012
Fixed smoke variation with step size
Fixed plate "smoothing" in divergent and subduction cases, fixing the main "step" bug
Significant model changes for a better working "subduction/overriding" model that works with the step button (still work to go on it)
# 0.00.29 (62874) Mar 29, 2012
Removed "Step" button temporarily
Fixed continental-continental collisions for handling any timestep size (fixes the "step" bug for this motion type)
Fixed mountain size consistency in continental-continental collision for the 2nd tab
Removed "back" arrows for handles that can't be dragged back (for now, they still appear on the opposite side if you have the same crust types)
# 0.00.28 (62693) Mar 21, 2012
Fixed: various mouse-press and drag issues, including the play/pause pressing bug noted earlier
Fixed: bug where borders of the "draggable crust pieces" were cut off when window was resized
Fixed: hard color boundary between above/below sea level terrain was causing "instant" changes of flashing terrain
Fixed: bug where dragging two young oceanic plates together (even though not visually allowed) would crash sim
# 0.00.27 (62534) Mar 13, 2012
Added smoke to volcanoes
# 0.00.26 (62495) Mar 12, 2012
Improved transform fault valley
Exaggerated sea-floor spreading ridge
# 0.00.25 (62442) Mar 12, 2012
On reset, tools are put back in toolbox
Fixed time speed control reset
Fixed crust piece dragging with resized window bug
Temporarily removing "Show Labels" on 2nd tab until those labels are implemented