@@ -47,3 +47,5 @@ toolbox=Toolbox
 zoom=Zoom
 
 legend=Legend
+
+sensorMultiplier={0}x
